--- a/css/estilo.css
+++ b/css/estilo.css
@@ -15,7 +15,7 @@ a:hover {
 		}		}	
 p {margin-top: 10px; margin-bottom:5px;}
 h1 {color: #15428B; margin-top: 10px; margin-bottom:5px;}
-h2 {color: #15428B; margin-top: 10px; margin-bottom:5px; font-size: 12px;}
+h2 {color: #15428B; margin-top: 10px; margin-bottom:5px;}
 h3 {color: #15428B;}
 hr {color: #1E90FF; background-color: #1E90FF; height: 2px; border: 0;}
 input, select {font-family: Verdana, Arial;}
@@ -87,6 +87,13 @@ div.dato_ok p{
   height: 20	px; background-color: #cccccc;
  
   font-size: 11px; font-weight: bold; 
+  cursor:hand; cursor:pointer;
+ 
+}
+.nuevostandard1{
+  height: 28px; background-color: #cccccc;
+ width: 100px;
+  font-size: 12px; font-weight: bold; 
   cursor:hand; cursor:pointer;
  
 }
