--- a/css/css.css
+++ b/css/css.css
@@ -1,26 +1,233 @@
-body {font-family: Verdana, Arial; font-size: 12px;  background-color:#F0F0F0;}
+body {
+font-family:Verdana, Geneva, Arial, Helvetica, sans-serif;  
+font-size: 12px; 
+background-color:#F0F0F0;}
 
-table {background-color: #cccccc;}
+Table.tablaGral{
+background-color: #cccccc;
+width:1200px;
+border-spacing: 5px; /* cellspacing */
+padding: 5px;/* cellpadding */
+}
+
+
+
 a {
 	text-decoration: none;	
 	font-size: 13	px;
-	color:#333333;
+	color:#000000;
 	background: inherit;	
-
+}
 a:hover {
-		color:#333333;
+		color:#000000;
 		background: inherit;	
-		font-size: 15px;
-		text-decoration:none;	
-		}		}	
-p {margin-top: 10px; margin-bottom:5px;}
-h1 {color: #15428B; margin-top: 10px; margin-bottom:5px;}
-h2 {color: #15428B; margin-top: 10px; margin-bottom:5px;}
-h3 {color: #15428B;}
-hr {color: #1E90FF; background-color: #1E90FF; height: 2px; border: 0;}
-input, select {font-family: Verdana, Arial;}
-img {border: 0;}
+		font-size: 13px;
+		text-decoration:none;
+		font-weight: bold;	
+}
+h1,h2,h3,h4,h5,h6 {
+	color: #15428B; 
+	margin-top: 5px; 
+	margin-bottom:5px;
+}
 
+hr {
+	color: #1E90FF; 
+	background-color: #1E90FF; 
+	height: 2px; 
+	border: 0px;
+}
+
+img {border: 0;}		
+
+/*Empieza Css Formulario Prendas*/
+.Prendas{
+padding-bottom: 10px;
+
+background-color: #15428b;	
+}
+
+table.tablaPrendas{
+border-spacing: 5px; /* cellspacing */
+padding: 5px;/* cellpadding */
+border: solid; 
+width:1150px;	
+margin: 0 auto;
+text-align: center;
+}
+Table.formuPrendas,Table.formuPrendas td{
+	border: 1px solid;
+}
+
+Table.formuPrendas tr:not(:first-child):hover {
+	background:#aaFFFF;
+}
+
+Table.formuPrendas tr:first-child {
+	font-weight: bold;
+	color:#fff;
+	background-color: #444;
+	border-bottom:1px #000 solid;
+	text-align:left;
+}
+
+.buttonPrendas{
+height: 30px;
+font-size: 15px; font-weight: bold; width: 150px; color:black;
+padding-left: 20px; cursor:hand; cursor:pointer;
+margin-left:5px; margin-right:5px; outline-width:0px;
+background-position:5px 5px; 
+text-decoration: none; 
+background-repeat: no-repeat; 
+border-radius: 20px; 
+border:1px solid #555555;
+background-image: url(../imagenes/iconos/add.png	);	
+}
+.buttonPrendas:hover{
+
+border:none;
+}
+.textPrendas{
+  height: 20	px; background-color: #cccccc;
+ 
+  font-size: 11px; font-weight: bold; 
+  cursor:hand; cursor:pointer;
+ 
+}
+/*Termina Css Formulario Prendas*/
+
+/*Empieza Css Formulario Caracteristicas*/
+.Caracteristicas{
+padding-bottom: 10px;
+
+background-color: #15428b;	
+}
+
+table.tablaCaracteristicas{
+border-spacing: 5px; /* cellspacing */
+padding: 5px;/* cellpadding */
+border: solid; 
+width:1150px;	
+margin: 0 auto;
+text-align: center;
+}
+Table.formuCaracteristicas,Table.formuCaracteristicas td{
+	border: 1px solid;
+}
+
+Table.formuCaracteristicas tr:not(:first-child):hover {
+	background:#aaFFFF;
+}
+
+Table.formuCaracteristicas tr:first-child {
+	font-weight: bold;
+	color:#fff;
+	background-color: #444;
+	border-bottom:1px #000 solid;
+	text-align:left;
+}
+
+.buttonCaracteristicas{
+height: 30px;
+font-size: 15px; font-weight: bold; width: 150px; color:black;
+padding-left: 20px; cursor:hand; cursor:pointer;
+margin-left:5px; margin-right:5px; outline-width:0px;
+background-position:5px 5px; 
+text-decoration: none; 
+background-repeat: no-repeat; 
+border-radius: 20px; 
+border:1px solid #555555;
+background-image: url(../imagenes/iconos/add.png	);	
+}
+.buttonCaracteristicas:hover{
+
+border:none;
+}
+.textCaracteristicas{
+  height: 20	px; background-color: #cccccc;
+ 
+  font-size: 11px; font-weight: bold; 
+  cursor:hand; cursor:pointer;
+ 
+}
+
+div.scrolCaracteristicas{
+	overflow: auto;
+	height: 150px;
+	border: solid;
+}
+/*Termina Css Formulario Caracteristicas*/
+
+
+/*Empieza Css Formulario Empleados*/
+.Empleados{
+padding-bottom: 10px;
+
+background-color: #15428b;	
+}
+
+table.tablaEmpleados{
+border-spacing: 5px; /* cellspacing */
+padding: 5px;/* cellpadding */
+border: solid; 
+width:1150px;	
+margin: 0 auto;
+text-align: center;
+}
+Table.formuEmpleados,Table.formuEmpleados td{
+	border: 1px solid;
+}
+
+Table.formuEmpleados tr:not(:first-child):hover {
+	background:#aaFFFF;
+}
+
+Table.formuEmpleados tr:first-child {
+	font-weight: bold;
+	color:#fff;
+	background-color: #444;
+	border-bottom:1px #000 solid;
+	text-align:left;
+
+}
+
+.buttonEmpleados{
+height: 30px;
+font-size: 15px; font-weight: bold; width: 100px; color:black;
+padding-left: 20px; cursor:hand; cursor:pointer;
+margin-left:5px; margin-right:5px; outline-width:0px;
+background-position:5px 5px; 
+text-decoration: none; 
+background-repeat: no-repeat; 
+border-radius: 20px; 
+border:1px solid #555555;
+background-image: url(../imagenes/iconos/add.png	);	
+}
+.buttonEmpleados:hover{
+
+border:none;
+}
+.textEmpleados{
+  height: 20px; background-color: #cccccc;
+ width: 120px;
+  font-size: 11px; font-weight: bold; 
+  cursor:hand; cursor:pointer;
+ 
+}
+
+
+div.scrolEmpleado{
+	overflow: auto;
+	height: 150px;
+	border: solid;
+}
+/*Termina Css Formulario Empleados*/
+
+
+/*
+table {background-color: #cccccc;}
+	
+p {margin-top: 10px; margin-bottom:5px;}
 td.tabla_datos {background-color: #FFFFFF; padding: 10px;}
 td.tabla_titulos {background-color: #E1EEFF; padding: 10px; width: 800px; font-weight: bold; }
 td.tabla_critica {background-color: #7CA0C7; padding: 10px;}
@@ -182,3 +389,4 @@ font-size: 11px; font-weight: bold;
 	text-align:left;
 }
 
+*/
