--- a/css/css.css
+++ b/css/css.css
@@ -190,8 +190,20 @@ Table.formuEmpleados tr:first-child {
 	text-align:left;
 
 }
+.buttonEmpleados:disabled{
+height: 30px;
+font-size: 15px; font-weight: bold; width: 100px; color:#333333	;
+background-color:#555555;
+padding-left: 20px; cursor:hand; cursor:pointer;
+margin-left:5px; margin-right:5px; outline-width:0px;
+background-position:5px 5px; 
+text-decoration: none; 
+background-repeat: no-repeat; 
+border-radius: 20px; 
+border:1px solid #555555;
 
-.buttonEmpleados{
+}
+.buttonEmpleados:enabled {
 height: 30px;
 font-size: 15px; font-weight: bold; width: 100px; color:black;
 padding-left: 20px; cursor:hand; cursor:pointer;
@@ -203,27 +215,106 @@ border-radius: 20px;
 border:1px solid #555555;
 background-image: url(../imagenes/iconos/add.png	);	
 }
-.buttonEmpleados:hover{
+.buttonEmpleados:hover:enabled{
 
 border:none;
 }
 .textEmpleados{
-  height: 20px; background-color: #cccccc;
+ height: 20px; 
+ background-color: #cccccc;
  width: 120px;
-  font-size: 11px; font-weight: bold; 
-  cursor:hand; cursor:pointer;
+ font-size: 11px; font-weight: bold; 
+ cursor:hand; cursor:pointer;
  
 }
 
 
 div.scrolEmpleado{
 	overflow: auto;
-	height: 150px;
+	height: 170px;
 	border: solid;
+	width: 520px;
 }
 /*Termina Css Formulario Empleados*/
 
+/*Empieza Css Formulario Clientes*/
+.Clientes{
+padding-bottom: 10px;
 
+background-color: #15428b;	
+}
+
+table.tablaClientes{
+border-spacing: 5px; /* cellspacing */
+padding: 5px;/* cellpadding */
+border: solid; 
+width:1150px;	
+margin: 0 auto;
+text-align: center;
+}
+
+Table.formuClientes,Table.formuClientes td{
+	border: 1px solid;
+}
+
+Table.formuClientes tr:not(:first-child):hover {
+	background:#aaFFFF;
+}
+
+Table.formuClientes tr:first-child {
+	font-weight: bold;
+	color:#fff;
+	background-color: #444;
+	border-bottom:1px #000 solid;
+	text-align:left;
+
+}
+.buttonClientes:disabled{
+height: 30px;
+font-size: 15px; font-weight: bold; width: 100px; color:#333333	;
+background-color:#555555;
+padding-left: 20px; cursor:hand; cursor:pointer;
+margin-left:5px; margin-right:5px; outline-width:0px;
+background-position:5px 5px; 
+text-decoration: none; 
+background-repeat: no-repeat; 
+border-radius: 20px; 
+border:1px solid #555555;
+
+}
+.buttonClientes:enabled {
+height: 30px;
+font-size: 15px; font-weight: bold; width: 100px; color:black;
+padding-left: 20px; cursor:hand; cursor:pointer;
+margin-left:5px; margin-right:5px; outline-width:0px;
+background-position:5px 5px; 
+text-decoration: none; 
+background-repeat: no-repeat; 
+border-radius: 20px; 
+border:1px solid #555555;
+background-image: url(../imagenes/iconos/add.png	);	
+}
+.buttonClientes:hover:enabled{
+
+border:none;
+}
+.textClientes{
+ height: 20px; 
+ background-color: #cccccc;
+ width: 120px;
+ font-size: 11px; font-weight: bold; 
+ cursor:hand; cursor:pointer;
+ 
+}
+
+
+div.scrolClientes{
+	overflow: auto;
+	height: 170px;
+	border: solid;
+	width: 520px;
+}
+/*Termina Css Formulario Clientes*/
 /*
 table {background-color: #cccccc;}
 	
