--- a/css/cssCaracteristicas.css
+++ b/css/cssCaracteristicas.css
@@ -11,12 +11,7 @@ padding: 5px;/* cellpadding */
 width:1150px;	
 margin: 0 auto;
 text-align: center;
-}
-table.tablaCaracteristicas1{
-border-spacing: 5px; /* cellspacing */
-padding: 5px;/* cellpadding */
-margin: 0 auto;
-text-align: center;
+
 }
 
 Table.formuCaracteristicas,Table.formuCaracteristicas td{
@@ -37,7 +32,7 @@ Table.formuCaracteristicas tr:first-child {
 
 .buttonCaracteristicas{
 height: 30px;
-font-size: 15px; font-weight: bold; width: 120px; color:black;
+font-size: 15px; font-weight: bold; width: 100px; color:black;
 padding-left: 20px; cursor:hand; cursor:pointer;
 margin-left:5px; margin-right:5px; outline-width:0px;
 background-position:5px 5px; 
@@ -52,17 +47,18 @@ background-image: url(../imagenes/iconos/add.png	);
 border:none;
 }
 .textCaracteristicas{
-  height: 20	px; background-color: #cccccc;
- 
+  height: 20px; background-color: #cccccc;
+ width: 100px;
   font-size: 11px; font-weight: bold; 
   cursor:hand; cursor:pointer;
  
 }
 
+
 div.scrolCaracteristicas{
 	overflow: auto;
 	height: 150px;
-	border: solid;
+
 }
 /*Termina Css Formulario Caracteristicas*/
 
