ABM pRENDA --- EDITA PRENDA --- COPIA PRENDA NO MUESTRA PRECIOS COPIADOS NI A EDITAR PERO SI LOS MODIFICA

--- a/css/cssPrendas.css
+++ b/css/cssPrendas.css
@@ -81,4 +81,10 @@ border:1px solid #555555;
 .no {
 	display: none;
 }
+
+div.scrolPrenda{
+	overflow: auto;
+	height: 350px;
+
+}
 /*Termina Css Formulario Prendas*/
