--- a/css/cssProv.css
+++ b/css/cssProv.css
@@ -1,4 +1,15 @@
 /*Empieza Css Formulario Prov*/
+.buttonLimpiar{
+	height: 30px;
+font-size: 15px; font-weight: bold; width: 130px; color:black;
+cursor:hand; cursor:pointer;
+margin-left:5px; margin-right:5px; outline-width:0px;
+background-position:5px 5px; 
+text-decoration: none; 
+background-repeat: no-repeat; 
+border-radius: 20px; 
+border:1px solid #555555;
+}
 .no {
 	display: none;
 }
