1) se modifico long de codigioPrenda en BS 2) se arreglo modificar proveedores (fatlaba coompletar un campo. 3)se agrego validator a Proveedores 4) se agrego buscador por nombre a Proveedores 5) se agrego buscador por nombre prenda en Prendas 6) se agrego validator a Prenda

--- a/css/css.css
+++ b/css/css.css
@@ -37,7 +37,13 @@ hr {
 }
 
 img {border: 0;}		
-
+input[type=search] {
+   
+    height: 30px;
+    width: 200px;
+    background: #CCC;
+    color: DarkBlue;
+}
 /*
 table {background-color: #cccccc;}
 	
