--- a/css/cssPrendas.css
+++ b/css/cssPrendas.css
@@ -1,4 +1,15 @@
 /*Empieza Css Formulario Prendas*/
+div.error { display: none; }
+input {	border: 1px solid black; }
+select{
+	border: 1px solid black;
+}
+input.checkbox { border: none }
+input:focus { border: 1px dotted black; }
+input.error { border: 1px dotted red; }
+select.error { border: 1px dotted red; }
+#formPrendas label { width: 70px;}
+#formPrendas label.error, #formProveedor	 input.submit {width: 210px; margin-left: 23px; color:red; text-align: right	; }
 .Prendas{
 padding-bottom: 10px;
 
@@ -21,7 +32,7 @@ Table.formuPrendas tr:not(:first-child):hover {
 	background:#aaFFFF;
 }
 
-Table.formuPrendas tr:first-child {
+	Table.formuPrendas thead {
 	font-weight: bold;
 	color:#fff;
 	background-color: #444;
@@ -61,7 +72,7 @@ background-image: url(../imagenes/iconos/add.png	);
 border:none;
 }
 .textPrendas{
-  height: 20	px; background-color: #cccccc;
+  height: 20px; background-color: #cccccc;
  
   font-size: 11px; font-weight: bold; 
   cursor:hand; cursor:pointer;
@@ -87,11 +98,5 @@ div.scrolPrenda{
 	height: 350px;
 
 }
-input[type=search] {
-   
-    height: 30px;
-    width: 200px;
-    background: #CCC;
-    color: DarkBlue;
-}
+
 /*Termina Css Formulario Prendas*/
