--- a/css/cssProv.css
+++ b/css/cssProv.css
@@ -1,4 +1,11 @@
 /*Empieza Css Formulario Prov*/
+div.error { display: none; }
+input {	border: 1px solid black; }
+input.checkbox { border: none }
+input:focus { border: 1px dotted black; }
+input.error { border: 1px dotted red; }
+#formProveedor label { width: 50px;}
+#formProveedor label.error, #formProveedor	 input.submit { margin-left: 53px; color:red; }
 .buttonLimpiar{
 	height: 30px;
 font-size: 15px; font-weight: bold; width: 130px; color:black;
@@ -23,11 +30,10 @@ table.tablaProv{
 border-spacing: 5px; /* cellspacing */
 padding: 5px;/* cellpadding */
 border: solid; 
-	
+width:1150px;	
 margin: 0 auto;
 text-align: center;
 }
-
 Table.formuProv,Table.formuProv td{
 	border: 1px solid;
 }
@@ -36,13 +42,12 @@ Table.formuProv tr:not(:first-child):hover {
 	background:#aaFFFF;
 }
 
-Table.formuProv tr:first-child {
+Table.formuProv thead {
 	font-weight: bold;
 	color:#fff;
 	background-color: #444;
 	border-bottom:1px #000 solid;
 	text-align:left;
-
 }
 .buttonProv:disabled{
 height: 30px;
