--- a/css/css.css
+++ b/css/css.css
@@ -44,6 +44,10 @@ input[type=search] {
     background: #CCC;
     color: DarkBlue;
 }
+
+.no {
+	display: none;
+}
 /*
 table {background-color: #cccccc;}
 	
