--- a/css/css.css
+++ b/css/css.css
@@ -1,10 +1,10 @@
 body {
 font-family:Verdana, Geneva, Arial, Helvetica, sans-serif;  
 font-size: 12px; 
-background-color:#F0F0F0;}
+background-image: linear-gradient(to bottom,#fcf8e3 0,#f8efc0 100%);}
 
 Table.tablaGral{
-background-color: #cccccc;
+background-image: linear-gradient(to bottom,#fcf8e3 0,#f8efc0 100%);
 width:1200px;
 border-spacing: 5px; /* cellspacing */
 padding: 5px;/* cellpadding */
@@ -24,7 +24,7 @@ a:hover {
 		font-weight: bold;	
 }
 h1,h2,h3,h4,h5,h6 {
-	color: #15428B; 
+	 color: #1E90FF; 
 	margin-top: 5px; 
 	margin-bottom:5px;
 }
@@ -38,160 +38,59 @@ hr {
 
 img {border: 0;}		
 input[type=search] {
-   
+   font-weight: bolder;
     height: 30px;
     width: 200px;
-    background: #CCC;
+    background: gray;
     color: DarkBlue;
 }
 
 .no {
 	display: none;
 }
-/*
-table {background-color: #cccccc;}
-	
-p {margin-top: 10px; margin-bottom:5px;}
-td.tabla_datos {background-color: #FFFFFF; padding: 10px;}
-td.tabla_titulos {background-color: #E1EEFF; padding: 10px; width: 800px; font-weight: bold; }
-td.tabla_critica {background-color: #7CA0C7; padding: 10px;}
-td.tabla_critica_titulos {background-color: #f5f5f5; padding: 10px; width: 800px; font-weight: bold;}
-
-table.tabla_datos {border-collapse: collapse; }
-
-div.msg_exit p{
-	margin:0px 0px 0px 0px;
-	color:#EE2037;
-	
-	padding-left:1px;
-	padding-bottom:4px;
-	font-size:11px;
-	background-position:0px 0px;
-	font-family : "Tahoma, Arial;
+div.error { display: none; }
+input {	border: 1px solid black; }
+select{
+	border: 1px solid black;
+}
+input.checkbox { border: none }
+input:focus { border: 1px dotted black; }
+input.error { border: 1px dotted red; }
+select.error { border: 1px dotted red; }
+#formPrendas label { width: 160px;}
+#formPrendas label.error, #formPrendas input.submit {margin-left: 13px; color:red; text-align: right	; }
+#formProveedor label { width: 50px;}
+#formProveedor label.error, #formProveedor input.submit {width: 210px; margin-left: 23px; color:red; text-align: right	; }
+div.scrol{
+	overflow: auto;
+	height: 150px;
+	width: 390px;
+}
+div.scrol1{
+	overflow: auto;
+	height: 300px;
+	padding:10px; 
+}
+table.tabla{
+border-spacing: 5px; /* cellspacing */
+padding: 15px;/* cellpadding */
+width:1150px;	
+margin: 5px;
+text-align: center;
+}
+Table.formu,Table.formu td{
+	border: 1px solid;
 }
 
-div.error_dato p{
-	margin:0px 0px 0px 0px;
-	color:#EE2037;
-	padding-left:20px;
-	padding-bottom:4px;
-	font-size:12px;
-	background:url("../imagenes/iconos/cross111.png") no-repeat left top;
-	background-position:0px 0px;
-	font-family : "Trebuchet MS", Tahoma, Arial;
-}
-div.msg_user a {
-	text-decoration: none;	
-	font-size: 12px;
-	color:#333333;
-	background: inherit;	
-
-		}	
-table.msg_user  {text-align:right; vertical-align: top;}
-div.dato_ok p{
-	margin:0px 0px 0px 0px;
-	color:#EE2037;
-	padding-left:20px;
-	padding-bottom:4px;
-	font-size:12px;
-	background:url("accept.png") no-repeat left top;
-	background-position:0px 0px;
-	font-family : "Trebuchet MS", Tahoma, Arial;
+Table.formu tr:not(:first-child):hover {
+	background:#aaFFFF;
 }
 
-
-.btn{
-  height: 28px; background-color: #f5f5f0; border-bottom: 1px solid #AAAAAA;
-  border-right:1px solid #AAAAAA; border-top:0px; border-left:0px;
-  font-size: 12px; font-weight: bold; color:black;padding-left: 20px; background-repeat: no-repeat;
-  cursor:hand; cursor:pointer; margin-left:5px; margin-right:5px;outline-width:0px;
-  background-image: url(../imagenes/iconos/add.png);
-  background-position:5px 5px;
-}
-.btnstandard{
-  height: 28px; background-color: #cccccc;
-  font-size: 11px; font-weight: bold; 
-  cursor:hand; cursor:pointer;
- 
-}
-.nuevostandard{
-  height: 20	px; background-color: #cccccc;
- 
-  font-size: 11px; font-weight: bold; 
-  cursor:hand; cursor:pointer;
- 
-}
-.nuevostandard1{
-  height: 28px; background-color: #cccccc;
- width: 100px;
-  font-size: 12px; font-weight: bold; 
-  cursor:hand; cursor:pointer;
- 
-}
-.btn1{
- height: 28px; background-color: #f5f5f0; border-bottom: 1px solid #AAAAAA;
-  border-right:1px solid #AAAAAA; border-top:0px; border-left:0px;
-  font-size: 13px; font-weight: bold;  color:black;padding-left: 20px; background-repeat: no-repeat;
-  cursor:hand; cursor:pointer; margin-left:5px; margin-right:5px;outline-width:0px;
-  background-image: url(../imagenes/iconos/arrow_right.png);
-   background-position:5px 5px; width: 80px;
+Table.formu thead {
+	font-weight: bold;
+	color:#fff;
+	background-color: #444;
+	border-bottom:1px #000 solid;
+	text-align:left;
 }
 
-.btn:hover{
-font-size: 11px; font-weight: bold; 
-   height: 28px; width: 100px;	background-color: #E1EEFF; border-bottom: 1px solid #555555;
-  border-right:1px solid #555555; border-top:0px; border-left:0px; color:black; background-image: url(btns.png);
-  padding-left: 20px; background-repeat: no-repeat; cursor:hand; cursor:pointer;
-  margin-left:5px; margin-right:5px; outline-width:0px;
-  background-image: url(../imagenes/iconos/accept.png	);
-   background-position:5px 5px; 
-}
-.botones{
-height: 33px;
-font-size: 15px; font-weight: bold; width: 150px; color:black;
-padding-left: 20px; cursor:hand; cursor:pointer;
-  margin-left:5px; margin-right:5px; outline-width:0px;
-   background-position:5px 5px; 
-text-decoration: none; 
-background-repeat: no-repeat; 
-border-radius: 20px; 
-border:1px solid #555555;
-background-image: url(../imagenes/iconos/add.png	);	
-}
-.botones:hover{
-
-border:none;
-}
-
-.btn1:hover{
-font-size: 13px; font-weight: bold; 
-   height: 28px;width: 100px; background-color: #E1EEFF; border-bottom: 1px solid #555555;
-  border-right:1px solid #555555; border-top:0px; border-left:0px; 	color:black; background-image: url(btns.png);
-  padding-left: 20px; background-repeat: no-repeat; cursor:hand; cursor:pointer;
-  margin-left:5px; margin-right:5px; outline-width:0px;
-  background-image: url(../imagenes/iconos/accept.png	);
-   background-position:5px 5px; 
-}		
-
-.btnImprime	{
-font-size: 11px; font-weight: bold; 
- height: 28px; background-color: #f5f5f0; border-bottom: 1px solid #AAAAAA;
-  border-right:1px solid #AAAAAA; border-top:0px; border-left:0px;
-  font-size: 12px; font-weight: bold;  color:black;padding-left: 20px; background-repeat: no-repeat;
-  cursor:hand; cursor:pointer; margin-left:5px; margin-right:5px;outline-width:0px;
-  background-image: url(../imagenes/iconos/print.png);
-   background-position:5px 5px; 
-}
-.btnImprime:hover{
-font-size: 11px; font-weight: bold; 
-   height: 28px; width: 100px; background-color: #E1EEFF; border-bottom: 1px solid #555555;
-  border-right:1px solid #555555; border-top:0px; border-left:0px;
-  color:black; background-image: url(btns.png);
-  padding-left: 20px; background-repeat: no-repeat; cursor:hand; cursor:pointer;
-  margin-left:5px; margin-right:5px; outline-width:0px;
-   background-image: url(../imagenes/iconos/print.png);
-   background-position:5px 5px 5px 5px; 
- }
- 
- 
-*/
