--- a/css/css.css
+++ b/css/css.css
@@ -49,16 +49,27 @@ select.error { border: 1px dotted red; }
 #formPrendas label { width: 160px;}
 #formPrendas label.error, #formPrendas input.submit {margin-left: 13px; color:red; text-align: right	; }
 #formProveedor label { width: 50px;}
-#formProveedor label.error, #formProveedor input.submit {width: 170px; margin-left: 23px; color:red; text-align: right	; }
+#formProveedor label.error, #formProveedor input.submit {width: 170px; margin-left: 23px; color:red; text-align: right; }
 #formTela label { width: 50px;}
-#formTela label.error, #formTela input.submit {width: 150px;color:red; text-align: right	; }
-#formColor label.error, #formTela input.submit {width: 150px;color:red; text-align: right	; }
-#formMarca label.error, #formTela input.submit {width: 150px;color:red; text-align: right	; }
-#formTalle label.error, #formTela input.submit {width: 150px;color:red; text-align: right	; }
-#formEstampado label.error, #formTela input.submit {width: 150px;color:red; text-align: right	; }
-#formEstacion label.error, #formTela input.submit {width: 150px;color:red; text-align: right	; }
-#formTipoVenta label.error, #formTela input.submit {width: 150px;color:red; text-align: right	; }
-#formcliente label.error, #formTela input.submit {width: 170px;color:red; text-align: right	; }
+#formTela label.error, #formTela input.submit {width: 150px;color:red; text-align: right; }
+#formColor label { width: 50px;}
+#formColor label.error, #formColor input.submit {width: 150px;color:red; text-align: right; }
+#formMarca label { width: 50px;}
+#formMarca label.error, #formMarca input.submit {width: 150px;color:red; text-align: right; }
+#formTalle label { width: 50px;}
+#formTalle label.error, #formTalle input.submit {width: 150px;color:red; text-align: right; }
+#formEstampado label { width: 50px;}
+#formEstampado label.error, #formEstampado input.submit {width: 150px;color:red; text-align: right; }
+#formEstacion label { width: 50px;}
+#formEstacion label.error, #formEstacion input.submit {width: 150px;color:red; text-align: right; }
+#formTipoVenta label { width: 50px;}
+#formTipoVenta label.error, #formTipoVenta input.submit {width: 150px;color:red; text-align: right; }
+#formCliente label { width: 50px;}
+#formCliente label.error, #formCliente input.submit {width: 170px;color:red; text-align: right; }
+#formEmpresa label { width: 50px;}
+#formEmpresa label.error, #formEmpresa input.submit {width: 150px;color:red; text-align: right; }
+
+#formDinamico label.error, #formDinamico input.submit {width: 70px;color:red; text-align: right; }
 
 div.scrol{
     overflow: auto;
