Se agrego la devolucion Se rompe la accion por eso se comitea cualquier cosa.

--- a/css/css.css
+++ b/css/css.css
@@ -133,3 +133,13 @@ Table.formu thead {
 label.ccLabel {
     width: 62px;
 }
+
+#prendasDevolucion .scrolPrenda {
+    max-height: 180px;
+    overflow-x: auto;
+}
+
+.bodyDevoluciones .movimientosClienteCont .row.scrol {
+    max-height: 160px;
+    overflow-x: auto;
+}
