Se termino de acomodar el formulario de devolucion Se termino la accion de devolucion

--- a/css/css.css
+++ b/css/css.css
@@ -143,3 +143,15 @@ label.ccLabel {
     max-height: 160px;
     overflow-x: auto;
 }
+
+.bodyDevoluciones .cliente-prendas {
+    min-height: 285px;
+}
+
+.bodyDevoluciones .historico-compras {
+    min-height: 275px;
+}
+
+.bodyDevoluciones .hiden-form .devolverSend {
+    float: right;
+}
