Prendas: (EMMA)     - Ordenar por coodigo de prenda descendente (para saber la ultima cargada).     - Hacer que cuando se carga una prenda, aparezca un cartel como en caracteristicas. Hacer que se cierre con una cruz y no automaticamente.
Venta:
    - Ver de poder descontar la devolucion en una nueva venta. (EMMA)

Ventas y CC:(EMMA)
Hacer que no pueda elegir cliente si no elegio empleado (deshabilitar los select2).

CC:(EMMA)
- Hacer que uno no pueda cargar entrega de uno mismo (idem venta o devolucion).

Proveedores:(EMMA)
- Acortar la tabla, agregar scroll.
- Ver de agregar algun campo a la tabla.

--- a/css/css.css
+++ b/css/css.css
@@ -82,6 +82,13 @@ div.scrolPrenda{
     padding:10px; 
     
 }
+div.scrolProveedor{
+    overflow: auto;
+    overflow-x: hidden; 
+    height: 380px;
+    padding:10px; 
+    
+}
 div.scrolCliente{
     overflow: auto;
     overflow-x: hidden; 
@@ -154,4 +161,8 @@ label.ccLabel {
 
 .bodyDevoluciones .hiden-form .devolverSend {
     float: right;
+}.alert-success1{
+    font-weight: bolder;
+    font-size:large;
+    text-align: center;
 }
