--- a/css/css.css
+++ b/css/css.css
@@ -166,3 +166,13 @@ label.ccLabel {
     font-size:large;
     text-align: center;
 }
+#content table th span{
+		cursor:pointer;
+		padding-right:12px
+	}
+	#content table th span.asc{
+		background:url(http://localhost/eclectica/imagenes/iconos/sorta.gif) no-repeat right center;
+	}
+	#content table th span.desc{
+		background:url(http://localhost/eclectica/imagenes/iconos/sortd.gif) no-repeat right center;
+	}
